--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -11,6 +11,14 @@ body {
     width: 80px;
 }
 
+.carousel-control-next {
+    right: -66px !important; 
+}
+
+.carousel-control-prev {
+    left: -66px !important;
+}
+
 #img__play {
     position: absolute;
     top: 32%;
@@ -21,8 +29,9 @@ body {
 }
 
 .buyticket__fast {
+    z-index: 1;
     position: absolute;
-    top: 36px;
+    top: 150px;
     right: 70px;
     height: 388px;
     width: 357px;
