--- a/src/resource/views/home.hbs
+++ b/src/resource/views/home.hbs
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/home.css">
+    <link rel="stylesheet" href="/css/home.css">
     <title>L2DBT | Rạp phim hay nhất mọi thời đại</title>
 </head>
 
