--- a/src/resource/views/phimdangchieu.hbs
+++ b/src/resource/views/phimdangchieu.hbs
@@ -9,7 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.3/dist/jquery.slim.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="phimdangchieu.css">
+    <link rel="stylesheet" href="/css/phimdangchieu.css">
     <title>Phim đang chiếu</title>
 </head>
 <body>
