--- a/src/resource/views/uuDai.hbs
+++ b/src/resource/views/uuDai.hbs
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="uuDai.css">
+    <link rel="stylesheet" href="/css/uuDai.css">
 </head>
 <body>
     <div class="container">
