--- a/src/resource/views/favorable.hbs
+++ b/src/resource/views/favorable.hbs
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 
-    <link rel="stylesheet" href="/css/uuDai.css">
+    <link rel="stylesheet" href="favorable.css">
 </head>
 <body>
     <div class="container">
@@ -22,42 +22,97 @@
                 </a>
                 <div class="row">
                     <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div>
+                        <div class="img-KM-container">
                             <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
                                 <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
                             </a>
+                            
+                            <div class="caption">
+                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
+                                <br>
+                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
+                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
+                                    <div class="chi-tiet-btn">
+                                        <button class="chi-tiet">CHI TIẾT</button>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
     
                     <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div>
+                        <div class="img-KM-container">
                             <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
                                 <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
                             </a>
+
+                            <div class="caption">
+                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
+                                <br>
+                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
+                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
+                                    <div class="chi-tiet-btn">
+                                        <button class="chi-tiet">CHI TIẾT</button>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
     
                     <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div>
+                        <div class="img-KM-container">
                             <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
                                 <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
                             </a>
+
+                            <div class="caption">
+                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
+                                <br>
+                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
+                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
+                                    <div class="chi-tiet-btn">
+                                        <button class="chi-tiet">CHI TIẾT</button>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
     
                     <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div>
+                        <div class="img-KM-container">
                             <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
                                 <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
                             </a>
+
+                            <div class="caption">
+                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
+                                <br>
+                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
+                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
+                                    <div class="chi-tiet-btn">
+                                        <button class="chi-tiet">CHI TIẾT</button>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
     
                     <div class="col-md-4 col-sm-6 col-xs-6">
-                        <div>
+                        <div class="img-KM-container">
                             <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
                                 <img class="img-khuyen-mai" src="https://cdn.galaxycine.vn/media/2023/1/17/bangqltv-2023-digital-1200x1800_1673940943642.jpg">
                             </a>
+
+                            <div class="caption">
+                                <h4 class="main-cap">Chào 2023, Đón Mưa Quà Tặng Thành Viên Từ Galaxy Cinema!</h4>
+                                <br>
+                                <p>Chỉ cần là thành viên Galaxy Cinema, nhận ngay 1 bắp 2 nước!</p>
+                                <a href="https://www.galaxycine.vn/khuyen-mai/chao-2023-don-mua-qua-tang-thanh-vien-tu-galaxy-cinema">
+                                    <div class="chi-tiet-btn">
+                                        <button class="chi-tiet">CHI TIẾT</button>
+                                    </div>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -93,8 +148,6 @@
                         <option value="">15/3/2023</option>
                     </select>
 
-                    
-
                     <select name="" id="" class="sl">
                         <option value="" disabled selected hidden>Chọn suất</option>
                         <option value="">Suất 1</option>
@@ -102,16 +155,9 @@
                         <option value="">Suất 3</option>
                     </select>
 
-                    
-
-
                     <div class="mua-ve-btn">
                         <button class="mua-ve">MUA VÉ</button>
                     </div>
-
-                    
-
-                    
                 </div>
 
                 <h4 class="mua-ve-nhanh">PHIM ĐANG CHIẾU</h4>
@@ -120,6 +166,11 @@
                     <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
                         <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
                             <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
+                        
+                            <div class="mua-ve-PDC-btn">
+                                <p><label class="old">C13</label></p>
+                                <button class="mua-ve-PDC">MUA VÉ</button>
+                            </div>
                         </a>
                         <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
                     </div>
@@ -127,6 +178,11 @@
                     <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
                         <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
                             <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
+                        
+                            <div class="mua-ve-PDC-btn">
+                                <p><label class="old">C13</label></p>
+                                <button class="mua-ve-PDC">MUA VÉ</button>
+                            </div>
                         </a>
                         <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
                     </div>
@@ -134,6 +190,11 @@
                     <div class="col-md-13 col-sm-12 col-xs-12 movie-item">
                         <a href="https://www.galaxycine.vn/dat-ve/sieu-lua-gap-sieu-lay">
                             <img class="img-phim" src="https://cdn.galaxycine.vn/media/2023/3/3/450x300_1677813532298.jpg" alt="">
+                        
+                            <div class="mua-ve-PDC-btn">
+                                <p><label class="old">C13</label></p>
+                                <button class="mua-ve-PDC">MUA VÉ</button>
+                            </div>
                         </a>
                         <h5>SIÊU LỪA GẶP SIÊU LẦY</h5>
                     </div>
