--- a/src/resource/views/support.hbs
+++ b/src/resource/views/support.hbs
@@ -1,118 +1,171 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/support.css">
+    <link rel="stylesheet" href="/src/public/css/ticketprice.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+        integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
+        integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
+        crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
     <title>Hỗ Trợ</title>
 </head>
+
 <body>
     <div class="container">
         <div class="row">
             <div class="col-lg-7 contact">
                 <!--Section: Contact v.2-->
                 <section class="mb-4">
-                <!--Section heading-->
-                <h2 class="h1-responsive font-weight-bold text-center my-4">LIÊN HỆ VỚI CHÚNG TÔI</h2>
-            <!--Section description-->
-            <p class="text-center w-responsive mx-auto mb-5">Bạn có câu hỏi nào không? Xin đừng ngần ngại liên hệ trực tiếp với LDBT Cinema nhé.</p>
+                    <!--Section heading-->
+                    <h2 class="h1-responsive font-weight-bold text-center my-4">LIÊN HỆ VỚI CHÚNG TÔI</h2>
+                    <!--Section description-->
+                    <p class="text-center w-responsive mx-auto mb-5">Bạn có câu hỏi nào không? Xin đừng ngần ngại liên
+                        hệ trực tiếp với LDBT Cinema nhé.</p>
 
-            <div class="row">
+                    <div class="row">
 
-                <!--Grid column-->
-                <div class="col-md-9 mb-md-0 mb-5">
-                    <form id="contact-form" name="contact-form" action="mail.php" method="POST">
+                        <!--Grid column-->
+                        <div class="col-md-9 mb-md-0 mb-5">
+                            <form id="contact-form" name="contact-form" action="mail.php" method="POST">
 
-                        <!--Grid row-->
-                        <div class="row">
+                                <!--Grid row-->
+                                <div class="row">
 
-                            <!--Grid column-->
-                            <div class="col-md-6">
-                                <div class="md-form mb-0">
-                                    <label for="name" class="">Tên của bạn</label>
-                                    <input type="text" id="name" name="name" class="form-control">
-                                    
+                                    <!--Grid column-->
+                                    <div class="col-md-6">
+                                        <div class="md-form mb-0">
+                                            <label for="name" class="">Tên của bạn</label>
+                                            <input type="text" id="name" name="name" class="form-control">
+
+                                        </div>
+                                    </div>
+                                    <!--Grid column-->
+
+                                    <!--Grid column-->
+                                    <div class="col-md-6">
+                                        <div class="md-form mb-0">
+                                            <label for="email" class="">Email của bạn</label>
+                                            <input type="text" id="email" name="email" class="form-control">
+                                        </div>
+                                    </div>
+                                    <!--Grid column-->
+
                                 </div>
-                            </div>
-                            <!--Grid column-->
+                                <!--Grid row-->
 
-                            <!--Grid column-->
-                            <div class="col-md-6">
-                                <div class="md-form mb-0">
-                                    <label for="email" class="">Email của bạn</label>
-                                    <input type="text" id="email" name="email" class="form-control">
+                                <!--Grid row-->
+                                <div class="row">
+                                    <div class="col-md-12">
+                                        <div class="md-form mb-0">
+                                            <label for="subject" class="">Chủ đề</label>
+                                            <input type="text" id="subject" name="subject" class="form-control">
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                            <!--Grid column-->
+                                <!--Grid row-->
 
+                                <!--Grid row-->
+                                <div class="row">
+
+                                    <!--Grid column-->
+                                    <div class="col-md-12">
+
+                                        <div class="md-form">
+                                            <label for="message">Nội dung</label>
+                                            <textarea type="text" id="message" name="message" rows="2"
+                                                class="form-control md-textarea"></textarea>
+                                        </div>
+
+                                    </div>
+                                </div>
+                                <!--Grid row-->
+
+                            </form>
+
+                            <div class="text-center text-md-left">
+                                <a class="btn btn-primary"
+                                    onclick="document.getElementById('contact-form').submit();">Send</a>
+                            </div>
+                            <div class="status"></div>
                         </div>
-                        <!--Grid row-->
+                        <!--Grid column-->
 
-                        <!--Grid row-->
-                        <div class="row">
-                            <div class="col-md-12">
-                                <div class="md-form mb-0">
-                                    <label for="subject" class="">Chủ đề</label>
-                                    <input type="text" id="subject" name="subject" class="form-control">
-                                </div>
-                            </div>
+                        <!--Grid column-->
+                        <div class="col-md-3 text-center">
+                            <ul class="list-unstyled mb-0">
+                                <li><i class="fa fa-map-marker "></i>
+                                    <p>90 Nguyễn Thị Thập, Q7, HCMC</p>
+                                </li>
+
+                                <li><i class="fa fa-phone "></i>
+                                    <p>19001222</p>
+                                </li>
+
+                                <li><i class="fa fa-envelope "></i>
+                                    <p>support@ldbt.com</p>
+                                </li>
+                            </ul>
                         </div>
-                        <!--Grid row-->
+                        <!--Grid column-->
 
-                        <!--Grid row-->
-                        <div class="row">
-
-                            <!--Grid column-->
-                            <div class="col-md-12">
-
-                                <div class="md-form">
-                                    <label for="message">Nội dung</label>
-                                    <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
-                                </div>
-
-                            </div>
-                        </div>
-                        <!--Grid row-->
-
-                    </form>
-
-                    <div class="text-center text-md-left">
-                        <a class="btn btn-primary" onclick="document.getElementById('contact-form').submit();">Send</a>
                     </div>
-                    <div class="status"></div>
-                </div>
-                <!--Grid column-->
 
-                <!--Grid column-->
-                <div class="col-md-3 text-center">
-                    <ul class="list-unstyled mb-0">
-                        <li><i class="fa fa-map-marker "></i>
-                            <p>90 Nguyễn Thị Thập, Q7, HCMC</p>
-                        </li>
-
-                        <li><i class="fa fa-phone "></i>
-                            <p>19001222</p>
-                        </li>
-
-                        <li><i class="fa fa-envelope "></i>
-                            <p>support@ldbt.com</p>
-                        </li>
-                    </ul>
-                </div>
-                <!--Grid column-->
-
-            </div>
-
-        </section>
-        <!--Section: Contact v.2-->
+                </section>
+                <!--Section: Contact v.2-->
             </div>
             <div class="col-lg-5 book-ticket">
-                <div class="label-tab-buyticket">MUA VÉ NHANH</div>
+                <div class="title">
+                    <span id="text__buyfast">MUA VÉ NHANH</span>
+                </div>
+                <hr id="line__hor">
+                <div class="select__info__ticket">
+                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <option id="select__movie" selected>Chọn phim</option>
+                        <option value="1">Siêu lừa gặp siêu lầy</option>
+                        <option value="2">Tom and Jerry</option>
+                        <option value="3">Adam River</option>
+                    </select>
+
+                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <option id="select__movie" selected>Chọn rạp</option>
+                        <option value="vivoQ7">L2DBT Vivo City Quận 7</option>
+                    </select>
+
+                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <option id="select__movie" selected>Chọn ngày</option>
+                        <option value="113">11/3</option>
+                        <option value="123">12/3</option>
+                        <option value="133">13/4</option>
+                    </select>
+
+                    <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
+                        <option id="select__movie" selected>Chọn suất</option>
+                        <option value="8">8:00</option>
+                        <option value="10">10:00</option>
+                        <option value="12">12:00</option>
+                        <option value="14">14:00</option>
+                        <option value="16">16:00</option>
+                        <option value="18">18:00</option>
+                        <option value="20">20:00</option>
+                        <option value="22">22:00</option>
+                    </select>
+
+                    <button id="btn__buy__ticket" class="btn btn-primary">Mua vé</button>
+                </div>
                 <div style="margin-top:100px">
                     <h3>Phim đang chiếu</h3>
                     <div style="margin-top: 20px;">
@@ -135,4 +188,5 @@
         </div>
     </div>
 </body>
+
 </html>
